# tensorflow-object-detection-cpp

./: CMakeLists.txt  main.cpp  utils.cpp
